--- a/cli/package.json
+++ b/cli/package.json
@@ -27,6 +27,7 @@
     "api-spec-converter": "^2.11.0",
     "await-spawn": "^3.0.0",
     "chalk": "^3.0.0",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "class-validator-jsonschema": "^1.3.0",
     "clear": "^0.1.0",
