--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -6,12 +6,14 @@ WORKDIR /var/www
 
 ENV PATH="/var/www/node_modules/.bin:/var/www/bin:${PATH}"
 ENV RUNINDOCKER=true
-ENV NODE_OPTIONS="--experimental-modules --experimental-loader /var/www/.dist/cli/src/https-loader.js --experimental-specifier-resolution=node"
 
-RUN yum -y update && \
-curl -sL https://rpm.nodesource.com/setup_12.x | bash - && \
+RUN yum -y update
+
+RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash - && \
 yum -y install nodejs git python3 make gcc gcc-c++ openssh-server && \
 npm install -g yarn nodemon
+
+ENV NODE_OPTIONS="--experimental-modules --experimental-loader /var/www/.dist/cli/src/https-loader.js --experimental-specifier-resolution=node"
 
 ADD assets/start.sh /start.sh
 RUN chmod +x /start.sh
