--- a/projects/apis/workspace/package.json
+++ b/projects/apis/workspace/package.json
@@ -6,13 +6,14 @@
     "log4js": "^6.1.0"
   },
   "peerDependencies": {
-    "@anyopsos/module-api-globals": "~0.0.1"
+    "@anyopsos/module-api-globals": "~0.0.1",
+    "@anyopsos/module-sys-workspace": "~0.0.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "class-validator": "^0.11.0",
     "express": "^4.17.1",
-    "routing-controllers": "^0.8.0",
+    "routing-controllers": "https://github.com/anyOpsOS/routing-controllers.git#build",
     "typescript": "^3.7.4"
   },
   "homepage": "https://github.com/anyOpsOS/anyOpsOS#readme",
