--- a/docker/yaml/coredns-domain-rewrite.yaml
+++ b/docker/yaml/coredns-domain-rewrite.yaml
@@ -3,24 +3,48 @@ kind: ConfigMap
 metadata:
   name: coredns
   namespace: kube-system
+# data:
+#   Corefile: |
+#     .:53 {
+#         errors
+#         health
+#         rewrite stop {
+#            name regex (.*)\.anyopsos\.local\.$ {1}.anyopsos.svc.cluster.local
+#            answer name (.*)\.anyopsos\.svc\.cluster\.local\.$ {1}.anyopsos.local
+#         }
+#         kubernetes cluster.local in-addr.arpa ip6.arpa {
+#            pods insecure
+#            fallthrough in-addr.arpa ip6.arpa
+#         }
+#         prometheus :9153
+#         forward . /etc/resolv.conf
+#         cache 30
+#         loop
+#         reload
+#         loadbalance
+#         ready
+#     }
 data:
   Corefile: |
     .:53 {
-        errors
-        health
-        rewrite stop {
-           name regex (.*)\.anyopsos\.local\.$ {1}.anyopsos.svc.cluster.local
-           answer name (.*)\.anyopsos\.svc\.cluster\.local\.$ {1}.anyopsos.local
-        }
-        kubernetes cluster.local in-addr.arpa ip6.arpa {
-           pods insecure
-           fallthrough in-addr.arpa ip6.arpa
-        }
-        prometheus :9153
-        forward . /etc/resolv.conf
-        cache 30
-        loop
-        reload
-        loadbalance
-        ready
+      errors
+      health {
+        lameduck 5s
+      }
+      ready
+      rewrite stop {
+        name regex (.*)\.anyopsos\.local\.$ {1}.anyopsos.svc.cluster.local
+        answer name (.*)\.anyopsos\.svc\.cluster\.local\.$ {1}.anyopsos.local
+      }
+      kubernetes cluster.local in-addr.arpa ip6.arpa {
+        pods insecure
+        fallthrough in-addr.arpa ip6.arpa
+        ttl 30
+      }
+      prometheus :9153
+      forward . /etc/resolv.conf
+      cache 30
+      loop
+      reload
+      loadbalance
     }
