--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-bin/
-.dist/
 /tmp
 /out-tsc
 build/
@@ -50,4 +48,9 @@ ssh.key
 # System Files
 .DS_Store
 Thumbs.db
+
+# anyopsos
+bin/
+.dist/
 /internal_tests/
+/code
