--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -10,8 +10,18 @@ ENV RUNINDOCKER=true
 RUN yum -y update
 
 RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash - && \
-yum -y install nodejs git python3 make gcc gcc-c++ openssh-server && \
+yum install -y yum-utils && \
+yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && \
+yum install -y nodejs git python3 make gcc gcc-c++ openssh-server docker-ce-3:18.09.1-3.el7 && \
 npm install -g yarn nodemon
+
+RUN curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.1/kind-linux-amd64 && \
+chmod +x ./kind && \
+mv ./kind /usr/local/bin/kind
+
+RUN curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl" && \
+chmod +x ./kubectl && \
+mv ./kubectl /usr/local/bin/kubectl
 
 ADD assets/start.sh /start.sh
 RUN chmod +x /start.sh
