--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -23,9 +23,8 @@ RUN curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -
 chmod +x ./kubectl && \
 mv ./kubectl /usr/local/bin/kubectl
 
+ADD assets/kindconfig.yaml /kindconfig.yaml
 ADD assets/start.sh /start.sh
 RUN chmod +x /start.sh
-
-EXPOSE 22
 
 ENTRYPOINT ["/start.sh"]
