--- a/docker/yaml/anyopsos-core.yaml
+++ b/docker/yaml/anyopsos-core.yaml
@@ -66,7 +66,7 @@ spec:
             type: Directory
       containers:
         - name: core
-          image: anyopsos-core
+          image: localhost:46444/anyopsos-core:latest
           args: ["-stack-trace-limit=50"]
           resources:
             requests:
@@ -89,7 +89,7 @@ spec:
             failureThreshold: 5
             periodSeconds: 5
           # Get image from local
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           env:
             # Add CA as trusted by nodejs
             - name: NODE_EXTRA_CA_CERTS
