--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -9,7 +9,7 @@ ENV RUNINDOCKER=true
 
 RUN yum -y update
 
-RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash - && \
+RUN curl -sL https://rpm.nodesource.com/setup_14.x | bash - && \
 yum install -y yum-utils && \
 yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && \
 yum install -y nodejs git python3 make gcc gcc-c++ openssh-server docker-ce-3:18.09.1-3.el7 && \
@@ -26,5 +26,7 @@ mv ./kubectl /usr/local/bin/kubectl
 ADD assets/kindconfig.yaml /kindconfig.yaml
 ADD assets/start.sh /start.sh
 RUN chmod +x /start.sh
+
+EXPOSE 22
 
 ENTRYPOINT ["/start.sh"]
