--- a/projects/websockets/vmware/package.json
+++ b/projects/websockets/vmware/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@types/node": "^14.0.27",
     "socket.io": "^2.3.0",
-    "socket-controllers": "^0.0.5",
+    "socket-controllers": "https://github.com/anyOpsOS/socket-controllers.git#build",
     "typescript": "^3.9.7"
   },
   "homepage": "https://github.com/anyOpsOS/anyOpsOS#readme",
