fix(cli): kind mount folder

--- a/docker/assets/kindconfig.yaml
+++ b/docker/assets/kindconfig.yaml
@@ -12,7 +12,7 @@ nodes:
 - role: control-plane
   # add a mount from /path/to/my/files on the host to /files on the node
   extraMounts:
-  - hostPath: /var/www/
+  - hostPath: /var/lib/docker/volumes/anyopsos-data/_data
     containerPath: /var/www
 containerdConfigPatches:
 - |-
