--- a/docker/assets/kindconfig.yaml
+++ b/docker/assets/kindconfig.yaml
@@ -1,19 +1,26 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
-  # WARNING: It is _strongly_ recommended that you keep this the default
-  # (127.0.0.1) for security reasons. However it is possible to change this.
   apiServerAddress: "127.0.0.1"
-  # By default the API server listens on a random open port.
-  # You may choose a specific port but probably don't need to in most cases.
-  # Using a random port makes it easier to spin up multiple clusters.
   apiServerPort: 46443
 nodes:
 - role: control-plane
-  # add a mount from /path/to/my/files on the host to /files on the node
   extraMounts:
   - hostPath: /var/lib/docker/volumes/anyopsos-data/_data
     containerPath: /var/www
+  kubeadmConfigPatches:
+  - |
+    kind: InitConfiguration
+    nodeRegistration:
+      kubeletExtraArgs:
+        node-labels: "ingress-ready=true"
+  extraPortMappings:
+  - containerPort: 80
+    hostPort: 80
+    protocol: TCP
+  - containerPort: 443
+    hostPort: 443
+    protocol: TCP
 containerdConfigPatches:
 - |-
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
