--- a/cli/package.json
+++ b/cli/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.2",
     "clear": "^0.1.0",
+    "chokidar": "^3.4.2",
     "copyfiles": "^2.2.0",
     "edit-json-file": "^1.3.2",
     "figlet": "^1.2.4",
