--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -13,7 +13,8 @@ RUN curl -sL https://rpm.nodesource.com/setup_14.x | bash - && \
 yum install -y yum-utils && \
 yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && \
 yum install -y nodejs git python3 make gcc gcc-c++ openssh-server docker-ce-3:18.09.1-3.el7 bash-completion && \
-npm install -g yarn nodemon
+npm install -g yarn nodemon && \
+npm install -g --unsafe-perm stmux
 
 RUN curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.1/kind-linux-amd64 && \
 chmod +x ./kind && \
