--- a/projects/libraries/diagram/package.json
+++ b/projects/libraries/diagram/package.json
@@ -17,7 +17,6 @@
     "d3-selection": "^1.4.1",
     "dagre": "^0.8.5",
     "filesize": "^6.0.1",
-    "fast-json-stable-stringify": "^2.1.0",
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
@@ -28,8 +27,7 @@
     "@types/d3-scale-chromatic": "^1.3.1",
     "@types/d3-selection": "^1.4.1",
     "@types/dagre": "^0.7.42",
-    "@types/filesize": "^5.0.0",
-    "@types/fast-json-stable-stringify": "^2.0.0"
+    "@types/filesize": "^5.0.0"
   },
   "homepage": "https://github.com/anyOpsOS/anyOpsOS#readme",
   "repository": {
